--- a/index.html
+++ b/index.html
@@ -126,22 +126,14 @@
 
  
            <!--Formulario -->
-          <form  action="enviar.php" method="post">
-             <label for="nombre">Nombre</label>
-             <input type="text" id="nombre" name="nombre" placeholder="Nombre" />   
-             <br> 
-             <label for="Email">  Email </label>        
-             <input type="email" id="Email" name="Email   " placeholder="Email" />   
-             <br> 
-             <label for="Telefono">Telefono</label>
-             <input type="text" id="Telefono" name="Telefono" placeholder="Telefono" />   
-             <br>     
-             <label for="Consulta"> Comentario </label>  
-             <br>        
-             <textarea cols="50" rows="10" id="Consulta" name="Consulta" placeholder="Ingrese consulta" ></textarea>
-             <br>       
-             <button type="submit">  Enviar</button>     
-             <button type="reset">  Borrar</button>  
+         <form action="enviar.php" method="post">
+                        <input type="text" name="name" id="name" class="name" placeholder="NOMBRE">
+                        <input type="text" name="mail" id="mail" class="email" placeholder="CORREO">
+                        <input type="text" name="phone" id="subject" class="subject" placeholder="TELÉFONO">
+                        <textarea name="message" class="message" placeholder="MENSAJE ... " id="message"></textarea>
+                        <div class="clear"></div>
+                            <div class="col-md-8"> 
+                                <button type="submit" class="btn btn-primary">ENVIAR </button>
 
             </form>
           </section>
