--- a/index.html
+++ b/index.html
@@ -82,3 +82,77 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
+           <!--Formulario -->
+          <form  action="enviar.php" method="post">
+             <label for="nombre">Nombre</label>
+             <input type="text" id="nombre" name="nombre" placeholder="Nombre" />   
+             <br> 
+             <label for="Email">  Email </label>        
+             <input type="email" id="Email" name="Email   " placeholder="Email" />   
+             <br> 
+             <label for="Telefono">Telefono</label>
+             <input type="text" id="Telefono" name="Telefono" placeholder="Telefono" />   
+             <br>     
+             <label for="Consulta"> Comentario </label>  
+             <br>        
+             <textarea cols="50" rows="10" id="Consulta" name="Consulta" placeholder="Ingrese consulta" ></textarea>
+             <br>       
+             <button type="submit">  Enviar</button>     
+             <button type="reset">  Borrar</button>  
+
+            </form>
+          </section>
+          <footer>
+              <section>              
+             <a target="_blank" href="mailto:Broparadores@gmail.com"  >Contactar por email</a>
+             <a target="_blank" href="https://www.facebook.com/Broparadores/">Visita Nuestro Facebook  </a>
+             <a target="_blank" href="https://walink.co/042557">Contactar por WhatsApp</a> 
+            </section>
+             <p>Copyright  2022</p>
+         </footer>
+</body>
+</html>
+
