--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
  
            <!--Formulario -->
-          <form  action="enviar.php" method="post">
+           <form  action="http://formspree.io/broparadores@gmail.com" method="POST">
              <label for="nombre">Nombre</label>
              <input type="text" id="nombre" name="nombre" placeholder="Nombre" />   
              <br> 
@@ -134,7 +134,7 @@
              <input type="email" id="Email" name="Email   " placeholder="Email" />   
              <br> 
              <label for="Telefono">Telefono</label>
-             <input type="text" id="Telefono" name="Telefono" placeholder="Telefono" />   
+             <input type="number" id="Telefono" name="Telefono" placeholder="Telefono" />   
              <br>     
              <label for="Consulta"> Comentario </label>  
              <br>        
