--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
  
            <!--Formulario -->
-           <form  action="http://formspree.io/broparadores@gmail.com" method="POST">
+           <form  action="https://www.formbackend.com/f/6c99d0e1d209d5b0" method="POST">
              <label for="nombre">Nombre</label>
              <input type="text" id="nombre" name="nombre" placeholder="Nombre" />   
              <br> 
