--- a/index.html
+++ b/index.html
@@ -16,47 +16,7 @@
      <h3 class="texto">Somos una empresa dedicada a sistemas de seguridad electrónica  </h3>     
      <h3 class="texto">Instalación y mantenimiento de cámaras de seguridad y sistemas de alarmas </h3>   
       <hr>
-    <!-- Esto es el titulo y su descripcion -->
    
-    
-
-<!-- Tipo de Listas UL desordenadas OL ordenadas-->
-<!-- listas en off 
-<ul>
-    <li style="color: chocolate;"" >Camaras</li>        
-    <li style="color: chocolate;">Alarmas</li> 
-    <li style="color: chocolate;">Contacto</li>
-
-</ul>
--->
-
-<!-- Listado de Prodcotos y Precios-->
-<!-- tabla en off
-<table style="width: 500px;">
-   <thead>
-        <tr>
-         <th>Producto</th>
-         <th>Desde</th>
-        </tr>
-    </thead>
-
-    <tbody>
-        <tr>
-            <td>Kit de 4 Camarás  </td>
-            <td> $15.000</td>
-        </tr>
-        <tr>
-            <td>Sistemas de Alarmas        </td>
-            <td> $12.000</td>
-        </tr>
-    </tbody>
-    -->
-  <!--- para el pie de la tabla no lo use en este caso de momento pero puede ser util en el futuro
-    dejo el codigo pronto  
-     <tfoot>
-        <td></td>
-        <td></td>
-    </tfoot> -->
     <section class="cosas" >
         <article >
             <a target="_blank" href="https://reparacion-instalacion.mercadolibre.com.uy/MLU-611362103-instalacion-y-mantenimiento-de-camaras-de-seguridad-_JM"  >Cámaras de Seguridad</a>
@@ -128,7 +88,7 @@
            <!--Formulario -->
            <form  action="https://formspree.io/f/xyyollzv" method="POST">
              <label for="nombre">Nombre</label>
-             <input type="text" id="nombre" name="nombre" placeholder="Nombre" />   
+             <input type="" id="nombre" name="nombre" placeholder="Nombre" />   
              <br> 
              <label for="Email">  Email </label>        
              <input type="email" id="Email" name="Email   " placeholder="Email" />   
